--- a/package.json
+++ b/package.json
@@ -27,9 +27,12 @@
     "@codemirror/state": "^6.5.0",
     "@codemirror/theme-one-dark": "^6.1.2",
     "@codemirror/view": "^6.35.3",
+    "@elevenlabs/elevenlabs-js": "^2.19.0",
     "@icons-pack/react-simple-icons": "^13.7.0",
     "@opentelemetry/api": "^1.9.0",
     "@opentelemetry/api-logs": "^0.200.0",
+    "@radix-ui/react-collapsible": "^1.1.12",
+    "@radix-ui/react-hover-card": "^1.1.15",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-use-controllable-state": "^1.2.2",
@@ -50,6 +53,7 @@
     "diff-match-patch": "^1.0.5",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.34.0",
+    "elevenlabs": "^1.59.0",
     "embla-carousel-react": "^8.6.0",
     "fast-deep-equal": "^3.1.3",
     "framer-motion": "^11.3.19",
